Setting up project for base package

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "deeppatel company",
+  "orgName": "Student Prep Shop",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
