--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,10 +2,14 @@
     "packageDirectories": [
         {
             "path": "force-app",
+            "package": "ToddGoochPrepShop",
+            "versionName": "ver 0.1",
+            "versionNumber": "0.1.0.NEXT",
             "default": true,
-            "package": "base-package",
-            "versionName": "Version 1.0",
-            "versionNumber": "1.0.0.NEXT"
+            "dependencies":[{
+                "package": "base-package",
+                "subscriberPackageVersionId": "04t5f000000W7v1AAC"
+            }]
         }
     ],
     "name": "project-2-data-warriors",
@@ -14,6 +18,7 @@
     "sourceApiVersion": "52.0",
     "packageAliases": {
         "base-package": "0Ho5f000000k9tdCAA",
-        "base-package@1.0.0-1": "04t5f000000W7v1AAC"
+        "base-package@1.0.0-1": "04t5f000000W7v1AAC",
+        "ToddGoochPrepShop": "0Ho5f000000TNDCCA4"
     }
 }
